--- a/src/app/layout/layouts/layout-app/layout-app.component.html
+++ b/src/app/layout/layouts/layout-app/layout-app.component.html
@@ -1,2 +1,6 @@
-<p>layout-app works!</p>
-<router-outlet></router-outlet>
+<div class="wrapper">
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
