home.componenent.ts search.component.ts

--- a/src/app/hn/components/home/home.component.html
+++ b/src/app/hn/components/home/home.component.html
@@ -1,6 +1,14 @@
+<!--
 <div class="bg-slate-500 h-full flex flex-row justify-center items-center">
   <div class="w-[100vw] md:w-[600px]">
-    <h1 class="text-5xl font-bold text-center mb-4">hn search</h1>
+    <h1 class="text-5xl font-bold text-center mb-4 -mt-24">hn search</h1>
+    <app-search-bar></app-search-bar>
+  </div>
+</div>
+-->
+<div class="bg-slate-500 h-full grid">
+  <div class="w-[100vw] md:w-[600px] place-self-center">
+    <h1 class="text-5xl font-bold text-center mb-4 -mt-24">hn search</h1>
     <app-search-bar></app-search-bar>
   </div>
 </div>
