--- a/src/app/hn/components/search/search.component.html
+++ b/src/app/hn/components/search/search.component.html
@@ -1,3 +1,4 @@
+<!--
 <div class="bg-slate-500 h-full flex flex-col">
   <div class="flex flex-row justify-center items-center">
     <div class="w-[100vw] md:w-[600px]">
@@ -6,4 +7,12 @@
     </div>
   </div>
   <div>search result ...</div>
+</div>
+-->
+<div class="bg-slate-500 h-full flex flex-col">
+  <div class="w-[100vw] md:w-[600px] place-self-center">
+    <h4 class="text-3xl font-bold text-center my-2">hn search</h4>
+    <app-search-bar></app-search-bar>
+    <div>search result ...</div>
+  </div>
 </div>
