--- a/src/app/hn/components/home/home.component.html
+++ b/src/app/hn/components/home/home.component.html
@@ -7,8 +7,8 @@
 </div>
 -->
 <div class="bg-slate-500 h-full grid">
-  <div class="w-[100vw] md:w-[600px] place-self-center">
+  <div class="w-[100vw] sm:w-[640px] place-self-center">
     <h1 class="text-5xl font-bold text-center mb-4 -mt-24">hn search</h1>
-    <app-search-bar></app-search-bar>
+    <div class="mx-4"><app-search-bar></app-search-bar></div>
   </div>
 </div>
