--- a/src/app/hn/components/search/search.component.html
+++ b/src/app/hn/components/search/search.component.html
@@ -9,10 +9,11 @@
   <div>search result ...</div>
 </div>
 -->
-<div class="bg-slate-500 h-full flex flex-col">
-  <div class="w-[100vw] md:w-[600px] place-self-center">
+<div class="bg-slate-500 h-full flex flex-col gap-4">
+  <div class="w-[100vw] sm:w-[640px] place-self-center">
     <h4 class="text-3xl font-bold text-center my-2">hn search</h4>
-    <app-search-bar></app-search-bar>
-    <div>search result ...</div>
+    <div class="mx-4"><app-search-bar></app-search-bar></div>
   </div>
+  <div class="mx-4 flex-auto bg-yellow-200">search result ...</div>
+  <div></div>
 </div>
