--- a/src/app/hn/components/search-bar/search-bar.component.html
+++ b/src/app/hn/components/search-bar/search-bar.component.html
@@ -19,10 +19,23 @@
   </div>
 </div>
 -->
-<form (ngSubmit)="searched.emit(searchBox.value)">
+<form (ngSubmit)="searched.emit(searchBox.value); searchBox.blur()">
   <div class="form-control">
     <div class="input-group">
-      <input type="text" placeholder="Search ..." class="input input-bordered flex-auto" [value]="keyword" #searchBox />
+      <input type="search" id="search-term" name="search-term" placeholder="Search ..." [defaultValue]="keyword"
+        class="input input-bordered flex-auto"
+        list="search-history"
+        autocomplete="off"
+        #searchBox />
+      <datalist id="search-history" *ngIf="searchHistory$ | async as searchHistory">
+        <option *ngFor="let historyItem of searchHistory" [value]="historyItem.keyword">
+      </datalist>
+      <!--
+      <datalist id="search-history">
+        <option value="123">
+        <option value="223">
+      </datalist>
+      -->
       <button class="btn btn-square">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
       </button>
