--- a/src/app/hn/components/search/search.component.html
+++ b/src/app/hn/components/search/search.component.html
@@ -19,7 +19,17 @@
   <div class="mx-4 flex-auto bg-white">
     <div *ngIf="queryResult$ | async as queryResult; else loading">
       <div class="grid grid-cols-1 divide-y divide-yellow-500">
-        <div class="my-4 mx-4"><p class="font-serif italic">{{ queryResult.nbHits }} hits found for {{ keyword }}</p></div>
+        <div class="my-4 mx-4 flex">
+          <p class="font-serif italic flex-auto place-self-center">{{ queryResult.nbHits }} hits found for {{ keyword }}</p>
+          <select class="select select-ghost w-full max-w-xs"
+            (change)="updateSorting($event)">
+            <option disabled selected>Sorting</option>
+            <option value="pointDes">pointDes</option>
+            <option value="timeDes">timeDes</option>
+            <option value="timeAsc">timeAsc</option>
+            <option value="pointAsc">pointAsc</option>
+          </select>
+        </div>
         <ng-container *ngFor="let hit of queryResult.hits | paginate: { itemsPerPage: 10, currentPage: page }; trackBy: trackById; index as i">
           <app-hit [title]="hit.title" [points]="hit.points" [url]="hit.url" [created_at_i]="hit.created_at_i"></app-hit>
         </ng-container>
