--- a/src/app/hn/components/search/search.component.html
+++ b/src/app/hn/components/search/search.component.html
@@ -29,6 +29,7 @@
             <option value="timeAsc">timeAsc</option>
             <option value="pointAsc">pointAsc</option>
           </select>
+          <button class="btn btn-ghost" title="clear search history" (click)="clearSearchHistory()"><i class="material-icons">clear_all</i></button>
         </div>
         <ng-container *ngFor="let hit of queryResult.hits | paginate: { itemsPerPage: 10, currentPage: page }; trackBy: trackById; index as i">
           <app-hit [title]="hit.title" [points]="hit.points" [url]="hit.url" [created_at_i]="hit.created_at_i"></app-hit>
@@ -41,4 +42,17 @@
 
 <ng-template #loading>
   <div class="my-4 mx-4"><p class="font-serif italic">loading ...</p></div>
+</ng-template>
+
+<ng-template>
+  <input type="checkbox" id="my-modal" class="modal-toggle">
+  <div class="modal">
+    <div class="modal-box">
+      <h3 class="font-bold text-lg">Congratulations random Interner user!</h3>
+      <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+      <div class="modal-action">
+        <label for="my-modal" class="btn">Yay!</label>
+      </div>
+    </div>
+  </div>
 </ng-template>
