--- a/src/app/hn/components/home/home.component.html
+++ b/src/app/hn/components/home/home.component.html
@@ -6,9 +6,18 @@
   </div>
 </div>
 -->
+<!--
 <div class="bg-slate-500 h-full grid">
   <div class="w-[100vw] sm:w-[640px] place-self-center">
     <h1 class="text-5xl font-bold text-center mb-4 -mt-24">hn search</h1>
     <div class="mx-4"><app-search-bar (searched)="onSearched($event)" keyword=""></app-search-bar></div>
   </div>
 </div>
+-->
+<div class="bg-slate-200 h-full grid grid-cols-1">
+  <div class="w-[100vw] sm:w-[640px] place-self-center -mt-24">
+    <h1 class="text-5xl font-bold text-center mb-4">hn search</h1>
+    <div class="mx-4"><app-search-bar (searched)="onSearched($event)" keyword=""></app-search-bar></div>
+  </div>
+</div>
+
