--- a/src/app/hn/components/search/search.component.html
+++ b/src/app/hn/components/search/search.component.html
@@ -32,9 +32,13 @@
           <!-- <button class="btn btn-ghost" title="clear search history" (click)="clearSearchHistory()"><i class="material-icons">clear_all</i></button> -->
           <div class="dropdown dropdown-end ml-4">
             <label tabindex="0" class="btn btn-ghost"><i class="material-icons">tune</i></label>
-            <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-80">
+            <ul tabindex="0" class="menu dropdown-content p-2 shadow bg-base-100 rounded-box w-64">
+              <!--
               <li><button class="btn btn-ghost" (click)="clearSearchHistory()">clear search history 🗑️</button></li>
               <li><button class="btn btn-ghost" [routerLink]="['..', 'about']">about ✨</button></li>
+              -->
+              <li class="btn btn-ghost text-left" (click)="clearSearchHistory()">clear search history</li>
+              <li class="btn btn-ghost text-left"><a [routerLink]="['..', 'about']">about</a></li>
               <li id="theme">
                 <div class="form-control">
                   <label class="label cursor-pointer">
