--- a/src/app/hn/components/home/home.component.html
+++ b/src/app/hn/components/home/home.component.html
@@ -7,7 +7,7 @@
 </div>
 -->
 <!--
-<div class="bg-slate-500 h-full grid">
+<div class="bg-slate-500 h-full grid grid-cols-1">
   <div class="w-[100vw] sm:w-[640px] place-self-center">
     <h1 class="text-5xl font-bold text-center mb-4 -mt-24">hn search</h1>
     <div class="mx-4"><app-search-bar (searched)="onSearched($event)" keyword=""></app-search-bar></div>
@@ -16,7 +16,7 @@
 -->
 <div class="h-full grid grid-cols-1" [ngClass]="(theme$ | async)?.bgColor1!">
   <div class="w-[100vw] sm:w-[640px] place-self-center -mt-24">
-    <h1 class="text-5xl font-bold text-center mb-4">hn search</h1>
+    <h1 class="text-5xl font-bold text-center mb-4" title="Hacker News Search">hn search</h1>
     <div class="mx-4"><app-search-bar (searched)="onSearched($event)" keyword=""></app-search-bar></div>
   </div>
 </div>
